--- a/YasuiBasic/WEB-INF/web.xml
+++ b/YasuiBasic/WEB-INF/web.xml
@@ -19,6 +19,10 @@
 		<location>/WEB-INF/jsp/common/405.jsp</location>
 	</error-page>
 
+	<error-page>
+		<exception-type>javax.servlet.ServletException</exception-type>
+		<location>/WEB-INF/jsp/common/exception.jsp</location>
+	</error-page>
 	<!--Application Initial Parameter -->
 	<context-param>
 		<param-name>mode.debug</param-name>
